2007-11-27  Ingo Renner	<ingo@typo3.org>

	* added clear cache actions menu to backend.php as part of the cleaner backend project

2007-11-27  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Bugfix #6836: htmlArea RTE cannot enter line break in Safari (Windows)

2007-11-26  Ingo Renner	<ingo@typo3.org>

	* moved interface t3lib_backendToolbarItem to typo3/interfaces/interface.backend_toolbaritem.php

2007-11-26  Wolfgang Klinger <wk@plan2.net>

	* Fixed bug #6831: Clickmenu is cut off on the left, when it does not fit in the viewport (Thanks to Helmut Hummel)

2007-11-25  Dmitry Dulepov  <dmitry@typo3.org>

	* Reformatted t3editor sysext

2007-11-25  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed Bug #6828: Using outpug buffering for debug() to prevent "Headers already sent" errors

2007-11-25  Benjamin Mack  <mack@xnos.org>

	* Feature #6829: New general template methods for FE & BE (Thanks to Steffen Kamper)
	* Added labels to checkbox descriptions in new EM section

2007-11-24  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #6817: Files with extension xml are ignored as resource of a template
	* Added feature #5530: Hook in TCEmain after all database operations
	* Cleaned up typo3/sysext/tstemplate_info/class.tx_tstemplateinfo.php

2007-11-24  Benjamin Mack  <mack@xnos.org>

	* Fix #6822: css_styled_content default EXTCONF was not loaded since it was installed by default

2007-11-24  Ingmar Schlecht  <ingmar@typo3.org>

	* Feature #6770: Flexform DataStructure pointerFields:
		* Implement option to use two ds_pointerFields so DataStructures can be switched by the combination of two field's values
		* Enabled the new ds_pointerFields possibility for tt_content.pi_flexform, so you can specify DataStructures per (combination of) list_type and CType values
		* Made css_styled_content register the DataStructures for the CType=table Content Element using the new ds_pointerFields instead of overriding the 'default' DS key
